Put back z-index which will fix iOS related bug

--- a/src/themes/video_player/default/player.scss
+++ b/src/themes/video_player/default/player.scss
@@ -2,6 +2,7 @@
 	display: inline-block;
 	position: relative;
 	overflow: hidden;
+	z-index: 1;
 }
 
 .#{$css}-video {
